# bezier-guarding

./: CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt
apps/bezmeshCLI/: CMakeLists.txt  main.cpp
cmake/: FindGMPXX.cmake
example/: example1.json  example2.json
include/: config.hpp
include/algorithm/: bezier_meshing.hpp  constants.hpp  curve_splitting.hpp  intersection_tests.hpp  timer.hpp  triangulating.hpp
include/datastructure/: bbox.hpp  bezier_curve.hpp  bezier_mesh.hpp  cgal_types.hpp  curve.hpp  guarded_bezier_curve.hpp  intersection_tree.hpp  line_segment.hpp  triangulation_constraints.hpp  vec2.hpp
include/fileio/: eps_writer.hpp  json_reader.hpp  msh_writer.hpp
include/util/: bezier_injectivity_checker.cpp  bezier_injectivity_checker.hpp  helper_functions.hpp  logger.hpp
src/: CMakeLists.txt
src/algorithm/: bezier_meshing.cpp  constants.cpp  curve_splitting.cpp  intersection_tests.cpp  timer.cpp  triangulating.cpp
src/datastructure/: bezier_mesh.cpp  intersection_tree.cpp  triangulation_constraints.cpp
src/fileio/: eps_writer.cpp  json_reader.cpp  msh_writer.cpp
src/util/: helper_functions.cpp
